# path_in_IT_bot

./: .env_example  .env_expample  .gitignore  Dockerfile  pyproject.toml
bot/: __main__.py  classificator.py  database.py  menu.py  states.py  templates.py  utils.py
bot/builders/: dialog_builder.py  states_group_builder.py  window_builder.py
bot/configs/: __init__.py  belbins_test_questions.py  config.py  entities.py  questions.py
bot/core/: classification.py
bot/database/: __init__.py  models.py  requests.py
bot/dialogs/BelbinsTest/: LoadData.py  __init__.py  dialog.py  getters.py  handlers.py
bot/dialogs/belbins_test/: __init__.py  dialog.py  getters.py  handlers.py  roles.py
bot/dialogs/career_guidance_test/: __init__.py  dialog.py  getters.py  handlers.py
bot/dialogs/career_guidance_testing/: dialog.py  getters.py  handlers.py  models.py  question.py  results.py  states.py
bot/entities/: interveiw.py
bot/factories/: dialogs_factory.py  interviews_factory.py
bot/handlers/: commands.py  garage.py  interview.py  kitchen.py  menu.py  professional_test.py  starts.py  states.py  wardrobe.py
bot/locales/: stub.pyi
bot/middlewares/: __init__.py  database.py  i18n.py
bot/readers/: questions_reader.py  text_reader.py
bot/utils/: __init__.py  career_guidance_testing.py  config.py  i18n.py  test_utils.py
docs/: conf.py  index.rst
path_in_IT_bot/: __main__.py  classificator.py  commands_handlers.py  database.py  db.py  garage_handlers.py  menu.py  models.py  states.py  templates.py  utils.py
path_in_IT_bot/builders/: __init__.py  abstract_builder.py  dialog_builder.py  dialogs_builder.py  states_builder.py  states_group_builder.py  window_builder.py  windows_builder.py
path_in_IT_bot/entities/: __init__.py  graph.py  interveiw.py  producer.py  question.py
path_in_IT_bot/factories/: __init__.py  abstract_factory.py  dialog_factory.py  dialogs_factory.py  interviews_factory.py  producers_factory.py  states_builder.py
path_in_IT_bot/handlers/: commands.py  garage.py  interview.py  kitchen.py  menu.py  producers.py  professional_test.py  starts.py  states.py  wardrobe.py
path_in_IT_bot/readers/: config_reader.py  model_reader.py  questions_reader.py  text_reader.py
static/: text.json
stubs/path_in_IT_bot/: __main__.pyi  commands_handlers.pyi  database.pyi  db.pyi  entities.pyi  garage_handlers.pyi  states.pyi  utils.pyi
(+22 files in other folders)
