[tool.poetry]
name = "path-in-it-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
aiogram-dialog = "^2.0.0"
databases = {extras = ["asyncpg", "aiopg"], version = "^0.8.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-aiofiles = "^23.2.0.0"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs/path_in_IT_bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
