[tool.poetry]
name = "path-in-it-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "path_in_it" },
    { include = "path_in_it/py.typed" },
]


[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
aiogram-dialog = "^2.0.0"
# databases = {extras = ["asyncpg", "aiopg"], version = "^0.8.0"}
asyncpg = ">=0.29.0"
pydantic-settings = "^2.0.3"
#transliterate = "^1.10.2"
#loguru = "^0.7.2"
redis = "^5.0.1"
#aiocache = "^0.12.2"
#igraph = "^0.11.3"
#networkx = "^3.2.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-aiofiles = "^23.2.0.0"
icecream = "^2.1.3"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs/path_in_IT_bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
